Component-Grid: Additional check on `$grid-row-columns`

--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -87,9 +87,11 @@
                     @include make-col-auto();
                 }
 
-                @for $i from 1 through $grid-row-columns {
-                    .row-cols#{$bprule}-#{$i} {
-                        @include row-cols($i);
+                @if $grid-row-columns > 0 {
+                    @for $i from 1 through $grid-row-columns {
+                        .row-cols#{$bprule}-#{$i} {
+                            @include row-cols($i);
+                        }
                     }
                 }
             }
