--- a/scss/mixins/_tables.scss
+++ b/scss/mixins/_tables.scss
@@ -4,8 +4,7 @@
     // inheritance to nested tables.
     .table-#{$state} {
         &,
-        > th,
-        > td {
+        > * {
             background-color: $bg;
         }
     }
@@ -13,13 +12,10 @@
     // Hover states for `.table-hover` and `.table-hover-alt`
     // Note: this is not available for cells or rows within `thead` or `tfoot`.
     [class*="table-hover"] {
-        .table-#{$state} {
-            @include hover() {
-                &,
-                > td,
-                > th {
-                    background-color: $hover-bg;
-                }
+        .table-#{$state}:hover {
+            &,
+            > * {
+                background-color: $hover-bg;
             }
         }
     }
