--- a/scss/core/_tables.scss
+++ b/scss/core/_tables.scss
@@ -5,7 +5,7 @@
 // - Stops styles from inheriting in nested tables from use of child combinators.
 // - Creates less generated CSS - removes need a possible 6 nested selector pairs.
 // - Easier to override since the selector is less specific.
-// Disdvantages:
+// Disadvantages:
 // - Possible performance hit?
 // - Confusing syntax.
 
