Component-List: Reduce nested list style inheritance

--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -14,17 +14,6 @@
             margin-bottom: 0;
             margin-left: $list-margin-left;
         }
-
-        // Reset for nested list items
-        .list,
-        .list-item {
-            .list-item {
-                padding: 0;
-                margin: 0;
-                border: 0 solid;
-                border-color: inherit;
-            }
-        }
     }
 
     // Space out nested bullet and ordered lists
@@ -85,14 +74,14 @@
     %list-bordered {
         border-color: $list-border-color;
 
-        .list-item {
+        > .list-item {
             border-top-color: inherit;
             border-top-width: $list-border-width;
             border-bottom-color: inherit;
             border-bottom-width: $list-border-width;
         }
 
-        .list-item + .list-item {
+        > .list-item + .list-item {
             border-top-width: 0;
 
             &.active {
@@ -122,7 +111,7 @@
     // Remove top and bottom borders for divided
     @if $enable-list-divided {
         .list-divided {
-            .list-item {
+            > .list-item {
                 &:first-child {
                     border-top: 0;
                 }
@@ -138,7 +127,7 @@
     // first and last children.
     @if $enable-list-group {
         .list-group {
-            .list-item {
+            > .list-item {
                 border-right-color: inherit;
                 border-right-width: $list-border-width;
                 border-left-color: inherit;
@@ -157,7 +146,7 @@
     // Add some padding to lists.
     @if $enable-list-spaced {
         .list-spaced {
-            .list-item {
+            > .list-item {
                 padding: $list-spaced-item-padding-y $list-spaced-item-padding-x;
             }
         }
@@ -165,7 +154,7 @@
 
     @if $enable-list-spaced-y {
         .list-spaced-y {
-            .list-item {
+            > .list-item {
                 padding-top: $list-spaced-item-padding-y;
                 padding-bottom: $list-spaced-item-padding-y;
             }
@@ -174,7 +163,7 @@
 
     @if $enable-list-spaced-x {
         .list-spaced-x {
-            .list-item {
+            > .list-item {
                 padding-right: $list-spaced-item-padding-x;
                 padding-left: $list-spaced-item-padding-x;
             }
@@ -187,7 +176,7 @@
             flex-direction: row;
             padding-left: 0;
 
-            .list-item {
+            > .list-item {
                 &:not(:last-child) {
                     margin-right: $list-horizontal-padding;
                 }
@@ -196,7 +185,7 @@
             &%list-hz-bull-and-ord {
                 margin-left: 0;
 
-                .list-item {
+                > .list-item {
                     &::before {
                         position: static;
                         margin-left: 0;
@@ -217,7 +206,7 @@
 
             @if $enable-list-bulleted {
                 &.list-bulleted {
-                    .list-item {
+                    > .list-item {
                         &:first-child::before {
                             content: none;
                         }
@@ -226,7 +215,7 @@
             }
 
             &%list-hz-div-and-rul {
-                .list-item {
+                > .list-item {
                     padding-right: $list-horizontal-padding;
                     padding-left: $list-horizontal-padding;
                     margin: 0 0 0 -#{$list-border-width};
@@ -238,7 +227,7 @@
                     border-left-width: $list-border-width;
                 }
 
-                .list-item + .list-item {
+                > .list-item + .list-item {
                     margin-top: 0;
                     border-left-width: 0;
 
@@ -261,7 +250,7 @@
 
             @if $enable-list-divided {
                 &.list-divided {
-                    .list-item {
+                    > .list-item {
                         &:first-child {
                             padding-left: 0;
                             border-left: 0;
@@ -277,7 +266,7 @@
 
             @if $enable-list-group {
                 &.list-group {
-                    .list-item {
+                    > .list-item {
                         padding-right: $list-horizontal-padding;
                         padding-left: $list-horizontal-padding;
                         margin: 0 0 0 -#{$list-border-width};
@@ -295,7 +284,7 @@
                         }
                     }
 
-                    .list-item + .list-item {
+                    > .list-item + .list-item {
                         // stylelint-disable-next-line selector-max-class
                         &.active {
                             margin-top: 0;
@@ -307,7 +296,7 @@
             // Spacing again due to specificity.
             @if $enable-list-spaced {
                 &.list-spaced {
-                    .list-item {
+                    > .list-item {
                         padding: $list-spaced-item-padding-y $list-spaced-item-padding-x;
                     }
                 }
@@ -315,7 +304,7 @@
 
             @if $enable-list-spaced-y {
                 &.list-spaced-y {
-                    .list-item {
+                    > .list-item {
                         padding-top: $list-spaced-item-padding-y;
                         padding-bottom: $list-spaced-item-padding-y;
                     }
@@ -324,7 +313,7 @@
 
             @if $enable-list-spaced-x {
                 &.list-spaced-x {
-                    .list-item {
+                    > .list-item {
                         padding-right: $list-spaced-item-padding-x;
                         padding-left: $list-spaced-item-padding-x;
                     }
@@ -370,9 +359,9 @@
         border: 0 solid;
         //border-color: inherit;
 
-        &::before {
-            content: none;
-        }
+        //&::before {
+        //    content: none;
+        //}
 
         &.disabled,
         &:disabled {
