Content-Forms: Make sure radio input always gets radius

--- a/scss/forms/_form-check.scss
+++ b/scss/forms/_form-check.scss
@@ -87,7 +87,8 @@
 
             .form-check-input[type="radio"] ~ .form-check-label {
                 &::before {
-                    @include border-radius($form-checkradio-radio-border-radius);
+                    // stylelint-disable-next-line property-blacklist
+                    border-radius: $form-checkradio-radio-border-radius;
                 }
             }
 
