--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -245,7 +245,7 @@ a {
 // Undo these styles for placeholder links/named anchors (without href).
 // It would be more straightforward to just use a[href] in previous block, but that
 // causes specificity issues in many other styles that are too complex to fix.
-a:not([href]) {
+a:not([href]):not([class]) {
     color: inherit;
     text-decoration: none;
 
