--- a/site/assets/4.0/scss/_content.scss
+++ b/site/assets/4.0/scss/_content.scss
@@ -5,17 +5,20 @@
 }
 
 // Content
+.cf-content-lead {
+    padding-top: 1rem;
+}
+
 .cf-content {
     padding-top: 1rem;
     padding-bottom: 2rem;
 
-    @include media-breakpoint-up(md) {
-        padding-right: 2.5rem;
-        padding-left: 2.5rem;
-    }
-
     > h2 {
         margin-top: 2rem;
+
+        &:first-child {
+            margin-top: 0;
+        }
     }
 
     > h3 {
@@ -46,13 +49,18 @@ h4 {
 
 // markdown-it-anchor icon
 .direct-link {
+    color: rgba($link-color, .7);
     text-decoration: none;
     opacity: 0;
-    @include transition(opacity .2s ease-in-out .1s);
+    @include transition(color .15s ease-in-out, opacity .15s ease-in-out);
 
-    @include hover-focus() {
-        color: inherit;
+    :focus {
+        color: $link-color;
         text-decoration: none;
+    }
+
+    &::after {
+        content: "#";
     }
 }
 :hover > .direct-link,
