--- a/site/assets/4.0/scss/_home.scss
+++ b/site/assets/4.0/scss/_home.scss
@@ -68,15 +68,27 @@
     }
 }
 
-.btn-start {
+.btn-home {
     padding: .75rem 2rem;
-    margin-bottom: .25rem;
     font-weight: 600;
+    border-width: 2px;
+    box-shadow: 2px 2px .2rem rgba(0, 0, 0, .35);
+}
+
+.btn-start {
     color: #fff;
     background-color: #2a75a0;
     border-color: #dee;
-    border-width: 2px;
-    box-shadow: 2px 2px .2rem rgba(0, 0, 0, .35);
+
+    @include hover-focus() {
+        color: #222;
+        background-color: #e7f0f5;
+    }
+}
+.btn-download {
+    color: #fff;
+    background-color: #2a75a0;
+    border-color: #dee;
 
     @include hover-focus() {
         color: #222;
