--- a/site/assets/4.0/scss/_topnav.scss
+++ b/site/assets/4.0/scss/_topnav.scss
@@ -14,20 +14,8 @@
         }
 
         .cf-content {
-            > h1[id],
-            > h2[id],
-            > h3[id],
-            > h4[id],
-            > h5[id] {
-                &::before {
-                    position: relative;
-                    z-index: -1;
-                    display: block;
-                    height: 4.5rem;
-                    margin-top: -4.5rem;
-                    visibility: hidden;
-                    content: "";
-                }
+            > [id] {
+                scroll-margin-top: 4.5rem;
             }
         }
     }
