--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -235,13 +235,11 @@
                             background-color: transparent;
                             border-color: transparent;
                         }
-                    }
 
-                    .open > .nav-link,
-                    .active > .nav-link,
-                    .nav-link.open,
-                    .nav-link.active {
-                        color: $navbar-light-active-color;
+                        &.open,
+                        &.active {
+                            color: $navbar-light-active-color;
+                        }
                     }
                 }
             }
@@ -304,13 +302,11 @@
                             background-color: transparent;
                             border-color: transparent;
                         }
-                    }
 
-                    .open > .nav-link,
-                    .active > .nav-link,
-                    .nav-link.open,
-                    .nav-link.active {
-                        color: $navbar-dark-active-color;
+                        &.open,
+                        &.active {
+                            color: $navbar-dark-active-color;
+                        }
                     }
                 }
             }
