--- a/scss/utilities/_typography.scss
+++ b/scss/utilities/_typography.scss
@@ -66,8 +66,8 @@
     // Word break
     @if $enable-utility-text-break {
         .text-break {
-            word-break: break-word !important; // IE & < Edge 18
-            overflow-wrap: break-word !important;
+            word-break: break-word !important;
+            word-wrap: break-word !important;
         }
     }
 
